# QZXingNu

./: .gitmodules  CMakeLists.txt  LICENSE  QZXingNu  QZXingNu.pri  QZXingNuFilter  README.md  qzxingnu.cpp  qzxingnu.h  qzxingnufilter.cpp  qzxingnufilter.h  zxing-cpp.pri
example/: main.cpp  main.qml
